[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/AbrilFatface-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/DrawingCards/Carousels/DeckCarousel.gd" type="Script" id=2]
[ext_resource path="res://resources/styleboxes/Color60-det8-bordw0-cornrad0.tres" type="StyleBox" id=3]
[ext_resource path="res://resources/DominantBackground.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[node name="CardDeck" type="Control"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="CarouselBackground" type="Panel" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
rect_min_size = Vector2( 1080, 1920 )
theme = ExtResource( 4 )
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="Control" parent="."]
margin_right = 1080.0
margin_bottom = 200.0
rect_min_size = Vector2( 1080, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer"]
anchor_left = -0.00740741
anchor_right = -0.00740741
margin_left = 348.0
margin_right = 748.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
custom_fonts/normal_font = SubResource( 1 )
text = "The Deck
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 150.0
margin_right = 1092.0
margin_bottom = 1720.0
rect_min_size = Vector2( 1080, 1470 )
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardDeckVBox" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1080.0
margin_bottom = 1720.0
rect_min_size = Vector2( 1080, 1720 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarouselCBox" type="CenterContainer" parent="ScrollContainer/CardDeckVBox"]
margin_right = 1080.0
margin_bottom = 1180.0
rect_min_size = Vector2( 1080, 1180 )

[node name="CarouselContainer" type="Control" parent="ScrollContainer/CardDeckVBox/CarouselCBox"]
margin_left = 20.0
margin_top = 100.0
margin_right = 1060.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1040, 980 )
__meta__ = {
"_edit_use_anchors_": false
}
